# kraken

./: .gitignore  Cargo.toml  README.md
benches/: performance.rs
src/: error.rs  lib.rs  main.rs
src/catalog/: catalog.rs  mod.rs  schema.rs  statistics.rs
src/cli/: client.rs  mod.rs  server.rs  status.rs
src/executor/: engine.rs  expression.rs  mod.rs
src/executor/operators/: aggregate.rs  filter.rs  join.rs  mod.rs  project.rs  scan.rs
src/network/: client.rs  mod.rs  protocol.rs  server.rs
src/planner/: explain.rs  logical.rs  mod.rs  optimizer.rs  physical.rs
src/raft/: log.rs  mod.rs  node.rs  replica.rs  rpc.rs  state_machine.rs
src/sql/: ast.rs  lexer.rs  mod.rs  parser.rs  types.rs
src/storage/: btree.rs  buffer_pool.rs  disk_manager.rs  heap.rs  mod.rs  page.rs
src/transaction/: lock_manager.rs  manager.rs  mod.rs  mvcc.rs
src/wal/: log_manager.rs  log_record.rs  mod.rs  recovery.rs
